# ethan-web

./: Cargo.toml  PLAN.md  README.MD  build.rs
.github/workflows/: deploy.yml
src/: cache.rs  handlers.rs  interview.m4a  interview.weba  logging.rs  main.rs  models.rs
static/: styles.css
templates/: achievement_detail.html  achievements.html  activities.html  activity_detail.html  base.html  index.html  media.html  media3.html  media_experiences.html  media_gallery.html  media_storyline.html  project_detail.html  projects.html  resume.html  resume2.html  resume3.html
