[package]
name = "ethan-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
askama = "0.12.1"
moka = { version = "0.12.8", features = ["future"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
